--- a/app/index.html
+++ b/app/index.html
@@ -40,9 +40,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#/add-recipe">Add a Recipe <span class="sr-only">(current)</span></a></li>
+        <!--<li><a href="#/add-recipe">Add a Recipe <span class="sr-only">(current)</span></a></li>-->
         <li><a href="#/recipes">View all recipes</a></li>
-        <li class="dropdown">
+          <!--<li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#">Action</a></li>
@@ -54,9 +54,7 @@
             <li><a href="#">One more separated link</a></li>
           </ul>
         </li>
-      </ul>
-
-
+      </ul>-->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
@@ -68,6 +66,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/lodash/dist/lodash.js"></script>
   <script src="bower_components/restangular/dist/restangular.js"></script>
